@@ -1,5 +1,4 @@
 DIST aravis-0.6.4.tar.gz 2972111 BLAKE2B b7f1c4da08bb4e7d11faffcd4ef90b7215b803e5e74ba1730388e04304685b761024ffea49b082c94e3fddc9dc65201545167a277b1088ad7273d41d50fae5b0 SHA512 6090fd730ad9fe8e1641e48c52189e8961bf03a88cefb57135a2de985c2ca607c21b05d472a60586976aa1e05ba2121246b06b75179dd3241e1f703aad8dd7be
-EBUILD aravis-0.6.4-r1.ebuild 1981 BLAKE2B 5d65064a67cbc48b7a81fc95e992b8e5ef493240ed0645f91dd957c98c00cebe0e6adf1ae251e199f5a29ff4189c5c05672eb809842ac37338c190e86c1698eb SHA512 cf2ef7816d5a75bfb3aec5a86ac2602178c9369216294ab47a19092409466a7df99c6c1ca25d0d3ac9f4922aca57ebaaaed42dfbde9afacc69f3649e20bd4ea0
 EBUILD aravis-0.6.4-r2.ebuild 1867 BLAKE2B 1274aacb093183783340044c79cb8021b8362876b03095cca194f0c882f63e127a7a731f619dde17f818cd0c14d659cd322afd07cd7138204e2e77d216dc6740 SHA512 ce8a8f48adbf9ecf0f2d3c01f54f9128f650490c9d8304e29411fc9744d184369e56af23ca22977efd145fe5b9de0840f1d9a4a53721ee155017e528744112f2
-MISC ChangeLog 516 BLAKE2B be987b4bd3883ccf642c337adb1617abc24088e3aa47f170a039fbfb2976b43af8c5e46e13c8eb002924c0abb200bfe14dbf1a1d8106f4b34e8b174ccb363678 SHA512 e763b792bc800a9cf7f51c27024d06136d42e79e262b283ad8bb9f9a9dc7cc591560f737e084efb6f49bddbfe7c13ac7967316b841e91e63d721e26b7ba122da
+MISC ChangeLog 610 BLAKE2B 738f516bfed07e320dc54c10cf89241a2eeb7d0eed419c6ac19e3ed5abcad3f5732ae03ea4b4364fae9ce30d58ccd3e72e6992abc7b835c9d3372168c2004151 SHA512 04d296a9cadfea726846ae8361c6e04617d219e9b9092a8465735c5bac79e97b77fc063ae8fb4c8ec6ac394f92e894548a385236cc04d8fcef0cfaa1cf5cbbaf
 MISC metadata.xml 1033 BLAKE2B b1f6f5e7f9a1c8f81dbb5717bbef6c6828bb922537f7408dadd4b03f6a5329ae1e451a1371fe411a78c9212f78497ba4f57fb433a7d31fd6aaccf2c196794e11 SHA512 f13cf2a72f4194f01d4f744611d525c95bc77d3e1faf0a5e01671696bd7ed1cf13b35a87bddfff8626f4bc206e5c9eeef175c15889affa726309c3b07bd48841
