@@ -1,3 +1,6 @@
+  02 Sep 2019;  <bemeurer@gentoo.org> -aravis-0.6.4-r1.ebuild:
+  media-video/aravis: yank r1
+
 *aravis-0.6.4-r2 (02 Sep 2019)
 
   02 Sep 2019;  <bemeurer@gentoo.org> +aravis-0.6.4-r2.ebuild:
